[tool.poetry]
name = "coursera"
version = "0.1.0"
description = ""
authors = ["ryanlupague <ryan.lupague@indebted.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
dash = "^2.14.2"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
